--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "author": "https://github.com/adolfo9castro",
   "license": "GPL-3.0",
   "dependencies": {
+    "ejs": "^2.6.1",
+    "express": "^4.17.0",
+    "path": "^0.12.7",
+    "serve-static": "^1.14.1",
     "yargs": "^13.2.4"
   }
 }
