--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "curso_node_js",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Proyecto para toda las entregar en el curso de node js",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
     "node": ">=10.0.0",
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,12 @@
   "author": "https://github.com/adolfo9castro",
   "license": "GPL-3.0",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "cfenv": "^1.2.2",
     "ejs": "^2.6.1",
     "express": "^4.17.0",
+    "hbs": "^4.0.4",
     "path": "^0.12.7",
     "serve-static": "^1.14.1",
     "yargs": "^13.2.4"
